hphp/test/zend/good/Zend/tests/access_modifiers_010.php.expectf

Fatal error: Call to private method d::test2() from context 'a' in %s/access_modifiers_010.php on line 11
